<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="robusta_home">Robusta Home</string>
    <string name="qr_scan">QR Scan</string>
    <string name="re_weighbale">Re-Weigh BALE</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="log_out">Logout</string>
    <string name="dispatch">Dispatch</string>
    <string name="incoming_mtns">Incoming MTNs</string>
    <string name="inventory">Inventory</string>
    <string name="tap_to_scan_lot">Tap to Scan</string>
    <string name="user_name">User Name</string>
    <string name="user_desc">Role</string>
    <string name="incoming_mtn">Incoming MTNs</string>
    <string name="select_incoming_mtn">Select Incoming MTNs</string>
    <string name="mtn_no">MTN No :&#160;</string>
    <string name="supply_plant_no">Supply Plant No :&#160;</string>
    <string name="supply_plant_name">Supply Plant Name :&#160;</string>
    <string name="container_no">Container No :&#160;</string>
    <string name="truck_no">Truck No :&#160;</string>
    <string name="no_of_bales_colon">No of Bales :&#160;</string>
    <string name="bale_details">Bale Details</string>
    <string name="bale_no">Bale No</string>
    <string name="received_from">Received From</string>
    <string name="received_on">Received On</string>
    <string name="grade">Grade</string>
    <string name="number_of_bales">No of Bales</string>
    <string name="select_offload">Select offload</string>
    <string name="offload_caps">Offload</string>
    <string name="verify_offload_caps">Verify &amp; Offload</string>
    <string name="store_in_inventory">Store in inventory</string>
    <string name="mtns_empty">No MTNS is found</string>
    <string name="offloaded_successfully">Offloaded Successfully</string>
    <string name="update_verified_bales">Please update the verified bales to the inventory to continue</string>
    <string name="good_small">Good</string>
    <string name="verify">Verify</string>
    <string name="offload">Offload</string>
    <string name="verify_and_offload_status">This MTN is in verify and offload process. Do you want to continue?</string>
    <string name="material_doc">Material Doc :&#160;</string>
    <string name="offline_successfully">Offline Data Stored Successfully</string>
    <string name="mater_offline">Offline Master Data</string>
    <string name="view_details">View Details</string>
    <string name="sync">Sync All</string>
    <string name="delete_msg">Are you sure? do you want delete this item</string>
    <string name="classificaion_of_bales">Classification of Bales</string>
    <string name="classification_review_offload">Classification - Review &amp; Offload</string>
    <string name="received">Received</string>
    <string name="verified">Verified</string>
    <string name="good_bales">Good Bales</string>
    <string name="damaged_bales">Damaged Bales</string>
    <string name="yet_to_verify">Yet to Verify</string>
    <string name="bale_summary">Bale Summary</string>
    <string name="declared">Declared</string>
    <string name="not_received">Not Received</string>
    <string name="Remove_BalaID">OBD Removed Successfully</string>
    <string name="inventory_bale">Inventory Bale</string>
    <string name="currently_25000_mtns">Currently\n25000 bales</string>
    <string name="first_in">First In</string>
    <string name="last_in">Last In</string>
    <string name="sort_by">Sort by</string>
    <string name="filter">Filter</string>
    <string name="bale_number">Bale No :&#160;</string>
    <string name="type_of_bale">Type of Bale :&#160;</string>
    <string name="inventory_grade">Grade :&#160;</string>
    <string name="bale_ID">Bale ID :&#160;</string>
    <string name="type">Type</string>
    <string name="type_grade">Type / Grade</string>
    <string name="damage_type">Damage Type :&#160;</string>
    <string name="change_bale_to_good">Change Bale to Good</string>
    <string name="update">Update</string>
    <string name="search">Search</string>
    <string name="inventory_bale_select_grade">Inventory Bale - Select Grade</string>
    <string name="inventory_bale_select_pile">Inventory Bale - Select Pile</string>
    <string name="no_grades_found">No Grades found</string>
    <string name="view_container_inventory">View Container\nInventory</string>
    <string name="track_container">Track Container</string>
    <string name="check_for_dispatch">Check for Dispatch</string>
    <string name="no_of_required_container">No of Required Container</string>
    <string name="inventory_container">Inventory Container</string>
    <string name="inventory_of_container">Inventory of Container</string>
    <string name="additional_container">Additional Container</string>
    <string name="added_on">Added on :&#160;</string>
    <string name="container_no_colon">Container No :&#160;</string>
    <string name="container_type_colon">Container Type :&#160;</string>
    <string name="track_container_summary">Track Container - Summary</string>
    <string name="shipping_line">Shipping Line</string>
    <string name="select_shipping_line">Select Shipping Line</string>
    <string name="dispatch_add_bales">Dispatch - Add Bales</string>
    <string name="container_in_progress">Container In Progress :  </string>
    <string name="hold_stuffing">Hold Stuffing</string>
    <string name="container_num">Container No</string>
    <string name="container_type">Container Type</string>
    <string name="grade_name">Grade</string>
    <string name="add_bales">Add Bales</string>
    <string name="enter_bale_id">Enter Bale ID</string>
    <string name="add">Add</string>
    <string name="bale_stuffing_summary">Bale Stuffing Summary</string>
    <string name="seal_container">Seal Container</string>
    <string name="bale_id">Bale ID</string>
    <string name="action">Action</string>
    <string name="dispatch_add_container">Dispatch - Add Container</string>
    <string name="container">No of Container</string>
    <string name="add_container">Add Container</string>
    <string name="scan_container_id">Scan Container ID</string>
    <string name="ot_split">OT Split</string>
    <string name="enter_container_id">Enter Container ID</string>
    <string name="container_summary">Container Summary</string>
    <string name="proceed_dispatch">Proceed Dispatch</string>
    <string name="bales">Bales</string>
    <string name="dispatch_sealed_container">Dispatch - Sealed Container</string>
    <string name="sealed_container">Sealed Container : </string>
    <string name="break_seal_to_edit_bales">Break Seal to edit bales</string>
    <string name="seal_no">Seal No</string>
    <string name="dispatch_confirm_dispatch">Dispatch - Confirm Dispatch</string>
    <string name="delivery_order_no">Delivery Order No : </string>
    <string name="total_weight_to_be_dispatch">Total Weight to be Dispatch : </string>
    <string name="total_num_of_bales_to_be_dispatch">Total Number of Bales to be Dispatch : </string>
    <string name="dispatch_summary">Dispatch Summary</string>
    <string name="confirm_dispatch">Confirm Dispatch</string>
    <string name="container_number">Container No : </string>
    <string name="view_bale_ids">View \n Bale IDs</string>
    <string name="dispatch_seal_container">Dispatch - Seal Container</string>
    <string name="seal">Seal</string>
    <string name="enter_seal_num">Enter Seal Number</string>
    <string name="re_weigh_bale">Re-weigh - BALE</string>
    <string name="reweigh_bales">Reweigh Bales</string>
    <string name="scan_bale_to_reweigh">Scan Bale to Re-Weigh</string>
    <string name="enter_bale_to_reweigh">Enter Bale Reweigh</string>
    <string name="weight">Weight</string>
    <string name="sending_plant">Sending Plant</string>
    <string name="added_weight">Added Weight</string>
    <string name="select_ot_number">Select OT Number</string>
    <string name="scan_bale_id">Scan Bale ID</string>
    <string name="proceed">Proceed</string>
    <string name="or">OR</string>
    <string name="closeaction">CloseAction</string>
    <string name="not_available">Not available</string>
    <string name="error_incorrect_container_id">Please enter correct format</string>
    <string name="error_bale_id">Bale Id should be ten numeric values</string>
    <string name="select_valid_ot">Select/Enter valid OT</string>
    <string name="progress">Progress</string>
    <string name="hyphen">-</string>
    <string name="no_bale_summary_available">No bale summary available</string>
    <string name="conatiner_already_exist">The container has been already added</string>
    <string name="bale_already_exist">The bale has been already added</string>
    <string name="bale_already_mapped_pile">Bale is already mapped to a pile</string>
    <string name="bale_already_verified">Bale has been already verified</string>
    <string name="bale_already_offloaded">Bale already offload</string>
    <string name="bale_not_available">Bale number is not on this OBD</string>
    <string name="yes">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="dialogTitle">Are you sure ?</string>
    <string name="dialogDeleteTitle">Confirm deletion of bale</string>
    <string name="dialogHoldTitle">Stuffing for container to be put on hold</string>
    <string name="completion_msg">Confirm completion of stuffing for all containers for OT</string>
    <string name="error_incorrect_seal_id">Please enter correct format</string>
    <string name="net_weight">NET Weight</string>
    <string name="tare_weight">TARE Weight</string>
    <string name="gross_weight">GROSS Weight</string>
    <string name="confirm_seal_container">Confirm sealing of container</string>
    <string name="confirm_leave_page">Are you sure you want to leave this page ?</string>
    <string name="ok">OK</string>
    <string name="view_sealed_container">View Sealed Container</string>
    <string name="dialog_dispatch_on_back">Are you sure you want to leave the page before completing dispatch?</string>
    <string name="dialog_confirm_delete">Confirm deletion of container</string>
    <string name="dialog_confirm_bale_delete">Confirm deletion of bale</string>
    <string name="dialog_confirm_dispatch">Confirm dispatch of OT</string>
    <string name="proceed_confirm_error">Please move all container to complete status</string>
    <string name="proceed_to_confirm_error">Select a valid OT or Add valid container for the OT</string>
    <string name="success_seal">Successfully Sealed</string>
    <string name="seal_num">Seal Number </string>
    <string name="dialog_confirm_breakseal">Confirm breaking of seal for container</string>
    <string name="logout_alert">Are you sure you want to logout?</string>
    <string name="no_of_bales">No of Bales</string>
    <string name="atleast_one_bale">Should add  atleast one bale</string>
    <string name="success_dispatch">Dispatch Successful</string>
    <string name="for_ot">for the OT</string>
    <string name="not_reach_weight">Weight is beyond tolerance</string>
    <string name="filters">Filters</string>
    <string name="select_type">Select all types</string>
    <string name="back_navigation">back navigation</string>
    <string name="balemark">Bale Mark : </string>
    <string name="select_dispatch_type">Select Dispatch Type</string>
    <string name="normal_dispatch">Normal Dispatch</string>
    <string name="direct_dispatch">Direct Dispatch</string>
    <string name="save_offline">Save in Offline</string>
</resources>