<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btnProceed"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/blue_port_background"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/margin_large"
            android:paddingTop="@dimen/margin_medium"
            android:paddingEnd="@dimen/margin_large"
            android:paddingBottom="@dimen/margin_medium"
            android:text="@string/inventory_bale_select_pile"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_medium" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvGradesEmpty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:text="@string/no_grades_found"
                android:visibility="invisible" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvInventoryPiles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/row_inventory_piles" />
        </FrameLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnProceed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/light_grey"
        android:enabled="false"
        android:paddingTop="@dimen/margin_medium"
        android:paddingBottom="@dimen/margin_medium"
        android:text="@string/proceed"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_medium"
        android:textStyle="bold"
        android:visibility="visible" />
</RelativeLayout>