<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bottom_border_black_port"
    android:backgroundTint="@null"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:padding="@dimen/margin_medium">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bale_number"
                    android:textColor="@color/grey_button"
                    android:fontFamily="@font/gilroy_regular"
                    android:textSize="@dimen/text_size_medium" />

                <TextView
                    android:id="@+id/tvIvenBaleId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="5dp"
                    android:text="18GRD00028"
                    android:paddingEnd="@dimen/margin_padding_size_zero"
                    android:textStyle="bold"
                    android:fontFamily="@font/gilroy_regular"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/text_size_medium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/inventory_grade"
                    android:fontFamily="@font/gilroy_regular"
                    android:textColor="@color/grey_button"
                    android:textSize="@dimen/text_size_medium" />

                <TextView
                    android:id="@+id/tvIvenBaleGrade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="5dp"
                    android:text="18GRD00028"
                    android:fontFamily="@font/gilroy_regular"
                    android:paddingEnd="@dimen/margin_padding_size_zero"
                    android:textStyle="bold"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/text_size_medium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type_of_bale"
                    android:fontFamily="@font/gilroy_regular"
                    android:textColor="@color/grey_button"
                    android:textSize="@dimen/text_size_medium" />

                <TextView
                    android:id="@+id/tvIvenBaleType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="5dp"
                    android:paddingEnd="@dimen/margin_padding_size_zero"
                    tools:text="Good"
                    android:fontFamily="@font/gilroy_regular"
                    android:textStyle="bold"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/text_size_medium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/balemark"
                    android:fontFamily="@font/gilroy_regular"
                    android:textColor="@color/grey_button"
                    android:textSize="@dimen/text_size_medium" />

                <TextView
                    android:id="@+id/tvIvenBaleMark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="5dp"
                    android:paddingEnd="@dimen/margin_padding_size_zero"
                    android:text="@string/not_available"
                    android:fontFamily="@font/gilroy_regular"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/text_size_medium"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center_horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/weight"
                        android:fontFamily="@font/gilroy_regular"
                        android:textColor="@color/grey_button"
                        android:textSize="@dimen/text_size_medium" />

                    <TextView
                        android:id="@+id/tvIvenBaleWeight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="180 KG"
                        android:fontFamily="@font/gilroy_regular"
                        android:textStyle="bold"
                        android:textColor="@color/text_black"
                        android:textSize="@dimen/text_size_medium" />
                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/back_navigation"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:src="@drawable/ic_right_arrow_port" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>